ansible-playbook/roles/traefik/dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-dashboard-ui
  namespace: kube-system
spec:
  rules:
  - host: k8s-dashboard.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
