ansible-playbook/roles/traefik/grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-grafana-ui
  namespace: kube-system
spec:
  rules:
  - host: k8s-grafana.com
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-grafana
          servicePort: 80
