ansible-playbook/roles/traefik/prometheus-grafana.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-prometheus-grafana-ui
  namespace: monitoring
spec:
  rules:
  - host: k8s-prometheus-grafana.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-monitoring-grafana
          servicePort: 80
