ansible-playbook/roles/traefik/prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-prometheus-ui
  namespace: monitoring
spec:
  rules:
  - host: k8s-prometheus.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
