ansible-playbook/roles/traefik/traefik-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: k8s.com
    http:
      paths:
      - path: /traefik
        backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
      - path: /dashboard
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
